TEST_PROGRAMS/INVALID/eric_ditomasso/readstring.min
# testing reading an expression
var y: string;

read "y";
